fixed some spacing, added in play button

--- a/style.css
+++ b/style.css
@@ -121,7 +121,9 @@ progress::-webkit-progress-bar {
   padding-right: 10px; */
 }
 
-
+.extra-padding {
+  padding-bottom: 100px;
+}
 
 .holder {
   display: inline;
@@ -205,6 +207,7 @@ progress::-webkit-progress-bar {
 }
 
 .album-card2 {
+  position: relative;
   color: white;
   margin-bottom: 0.5rem;
   line-clamp: 2;
@@ -247,6 +250,11 @@ h4.see-all {
   font-weight: 600;
   align-self: center;
   margin-right: 5px;
+}
+
+button.see-all-button {
+  border: none;
+  background-color: rgba(18, 18, 18, 255);
 }
 
 .title-row {
@@ -446,8 +454,8 @@ h4.see-all {
 }
 
 .reflect {
-  -webkit-box-reflect: below 6px
-    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+  -webkit-box-reflect: below 2px
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
 }
 
 .artist-songs-container {
@@ -466,6 +474,34 @@ h4.see-all {
   width: 40px;
   background: #1db954;
   border-radius: 50%;
+}
+
+.spotify-circle:hover {
+  transform: scale(1.1);
+}
+
+.album-card2:hover .play-button-div {
+  transform: translateY(-1rem);
+  opacity: 1;
+}
+
+.play-button-div {
+  opacity: 0;
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  border-radius: 50%;
+  bottom: 6rem;
+  right: 2rem;
+  transition: all 0.5s;
+  /* transition: translateY 0.4s; */
+}
+
+.play-button {
+  color: #1db954;
+  font-size: 2.5rem;
+  /* box-shadow: 2px 3px black; */
+  /* bottom: 2rem; */
 }
 
 .table-borderless td {
@@ -505,8 +541,12 @@ h4.see-all {
   padding: 2px;
   padding-left: 10px;
   padding-right: 10px;
-  border: 1px solid lightgrey;
+  border: 1px solid rgba(231, 228, 228, 0.24);
   border-radius: 3px;
+}
+
+.follow:hover {
+  border: 1px solid white;
 }
 
 .dots {
@@ -521,7 +561,15 @@ h4.see-all {
   width: 5px;
   height: 5px;
   border-radius: 50%;
-  background: rgba(255, 255, 255, 0.473);
+  background: rgba(255, 255, 255, 0.226);
+}
+
+.album-dots:hover .small-circle {
+  background-color: white;
+}
+
+.dots:hover .small-circle {
+  background-color: white;
 }
 
 .artist-song-rows {
@@ -533,6 +581,8 @@ td img {
   width: 20px;
   height: 20px;
   bottom: 5px;
+  margin-left: 10px;
+  margin-right: 2px;
 }
 
 .round-artist {
@@ -603,34 +653,34 @@ a:hover {
 }
 
 .morning-card h5 {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 #populartitle {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .table {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .table td {
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    color: #e6e7e8;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  color: #e6e7e8;
 }
 
 .albumsong {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 tr.border_bottom td {
   border-bottom: 1px solid #2e2e2e;
 }
 
- /* ////////////////////// 
+/* ////////////////////// 
 
 #loginlogo {
   height: 100px;
@@ -755,10 +805,10 @@ h6.roosa-h6 {
   background: rgb(243, 0, 231);
   background: rgb(243, 0, 231);
   background: linear-gradient(
-    180deg,
-    rgba(230, 108, 155, 0.479) 13%,
-    rgba(177, 5, 162, 0.712) 25%,
-    rgb(136, 4, 134) 50%,
+    200deg,
+    rgba(173, 6, 98, 0.518) 13%,
+    rgba(194, 3, 187, 0.541) 25%,
+    rgba(136, 4, 134, 0.71) 50%,
     rgba(81, 3, 95, 0.72) 75%
   );
   background-size: 100%;
@@ -837,8 +887,6 @@ h6.roosa-h6 {
   margin-right: 2px;
 }
 
-
-
 #loginlogo {
   height: 100px;
   width: 180px;
@@ -856,7 +904,6 @@ h6.roosa-h6 {
 }
 
 h6.roosa-h6 span {
-  
   padding: 0 10px;
   background: var(--color-secondary);
   color: var(--font-color);
@@ -868,7 +915,6 @@ h6.roosa-h6 span {
 }
 
 .btn-black {
- 
   background: var(--color-tertiary);
   color: var(--color-tertiary);
 }
@@ -880,7 +926,7 @@ h6.roosa-h6 span {
   padding: 16px 48px 18px;
   border-width: 0;
   letter-spacing: 2px;
-  
+
   width: 100%;
   text-transform: uppercase;
   white-space: normal;
@@ -889,8 +935,6 @@ h6.roosa-h6 span {
 .btn.roosa-btn {
   padding: 16px 14px 18px;
 }
-
-
 
 #terms {
   font-size: 10px;
@@ -956,7 +1000,7 @@ h6.roosa-h6 {
 
 .buttons-wrap {
   display: flex;
-  
+
   max-width: 100%;
 }
 
@@ -965,52 +1009,52 @@ h6.roosa-h6 {
   max-width: 500px;
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  background: var(--color-secondary);
+  color: var(--font-color);
+}
+.theme-light {
+  --color-primary: green;
+  --color-secondary: white;
+  --color-tertiary: black;
+  --color-accent: #fd6f53;
+  --font-color: #000000;
+}
+.theme-dark {
+  --color-primary: #17ed90;
+  --color-secondary: #2b2e2c;
+  --color-tertiary: white;
+  --color-accent: #12cdea;
+  --font-color: #ffffff;
+}
+.container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: var(--color-secondary);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container h1 {
+  color: var(--font-color);
+}
+.container button {
+  color: var(--font-color);
+  background: var(--color-primary);
+  padding: 10px 20px;
+  border: 0;
+  border-radius: 5px;
+}
 
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    background: var(--color-secondary);
-    color: var(--font-color);
-  }
-  .theme-light {
-    --color-primary: green; 
-    --color-secondary: white;
-    --color-tertiary: black;
-    --color-accent: #fd6f53;
-    --font-color: #000000;
-  }
-  .theme-dark {
-    --color-primary: #17ed90;
-    --color-secondary: #2b2e2c;
-    --color-tertiary: white;
-    --color-accent: #12cdea;
-    --font-color: #ffffff;
-  }
-  .container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    background: var(--color-secondary);
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .container h1 {
-    color: var(--font-color);
-  }
-  .container button {
-    color: var(--font-color);
-    background: var(--color-primary);
-    padding: 10px 20px;
-    border: 0;
-    border-radius: 5px;
-  }
-
-  .btn-success {
-      color: var(--font-color);
-      border: 2px black;
+.btn-success {
+  color: var(--font-color);
+  border: 2px black;
 }
 
 .theme-light {
@@ -1055,7 +1099,6 @@ body.roosa-body {
   border: 0;
   border-radius: 5px;
 }
-
 
 .btn {
   color: var(--font-color);
